# stack_of_tasks

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml  pybullet.pyi  pyproject.toml  setup.py
launch/: demo.launch  demo.rviz  dual.launch  dual.rviz  multi.launch  multi.rviz  multi.xml  pj.xml  planning.launch  planning.rviz  plot.launch  single.launch  single.rviz  single.xml
python/: controller.py  markers.py  solver.py  task.py
python/bullet_py/: VarSizedOSQP.py  collision_task.py  demo.py
python/bullet_py/bullet_interface/: __init__.py  moveit_scene.py  robot.py  types.py
python/stack_of_tasks/: __init__.py  __run.py  controller.py  dev_solver.py  genUI.sh  logger.py  markers.py  multi_solver.py  plot.py  robot_model.py  run.py  task.py  utils.py
python/stack_of_tasks/config/: __init__.py  config.py  load_safe.py
python/stack_of_tasks/config/yaml/: __init__.py  dumper.py  loader.py
python/stack_of_tasks/marker/: PositionOrientationMarker.py  __init__.py  abstract_marker.py  interactive_marker.py  marker_server.py  markers.py  trait_marker.py  utils.py
python/stack_of_tasks/parameter/: parameter.py
python/stack_of_tasks/plot/: __init__.py  plot_base.py  plot_csv.py  plot_publisher.py
python/stack_of_tasks/ref_frame/: __init__.py  frames.py  marker_frame.py  offset.py
python/stack_of_tasks/robot_model/: actuators.py  jointstate_publisher.py  robot_model.py  robot_state.py
python/stack_of_tasks/solver/: AbstactSolver.py  AbstractSolver.py  CVXOPTSolver.py  HQPSolver.py  InverseJacobianSolver.py  OSQPSolver.py  SCSSolver.py  __init__.py  solver.py
python/stack_of_tasks/tasks/: Eq_Tasks.py  Ieq_Tasks.py  Task.py  TaskHierachy.py  TaskHierarchy.py  Tasks.py  __init__.py  base.py  hierarchy.py
python/stack_of_tasks/ui/: ButtonDialog.py  Collapse.py  __init__.py  application.py  button_dialog.py  data_input.py  main.py  mainwindow.py  marker.py  matrix_view.py  model_mapping.py  new_instance_dialog.py  proj_window.py  run_ui.py  tab_widget.py  target.py  target_list.py  targets.py  taskhirachy.py  transforminput.py  utils.py
python/stack_of_tasks/utils/: __init__.py  class_register.py  tf_mappings.py  traits.py  transform_math.py
python/stack_of_tasks_ui/: data_input.py  main.py  mainwindow.py  tab_widget.py
python/stack_of_tasks_ui/hierarchy_tab/: new_task.py  tab.py  task_details.py
python/stack_of_tasks_ui/model/: av_ref.py
python/stack_of_tasks_ui/ref_tab/: new_ref.py  ref_details.py  tab.py
python/stack_of_tasks_ui/solver_tab/: tab.py
python/stack_of_tasks_ui/traits_mapping/: __init__.py  ui_mapping.py
python/stack_of_tasks_ui/ui_files/: CentralTabWidgit.ui  MainWindow.ui  Refs.ui  TaskHierachy.ui
scripts/: app.py  config_demo.py  dev.py  devstuff.py  dual_controller.py  example.py  genUI.sh  multi_solver.py  plot.py  run_ui.py  single_controller.py  test_robot_model.py
scripts/dev_traits/: controller.py  frames.py  rebuild.py  ref.py  robot_model.py  task.ipynb  task.py  tasks.py  ui.py
stacks/: dual.yml  line.yml  linear.yml  plane.yml  pointing.yml  quadratic.yml  test.yml
test/: profile_robot_model.py
utils/: genUI.sh
(+85 files in other folders)
