<?xml version="1.0"?>
<package format="2">
  <name>stack_of_tasks</name>
  <version>0.1.0</version>
  <description>Controller and solver package for hierarchical, taskbased motion generation.</description>

  <maintainer email="fkolesch@uni-bielefeld.de">Felix Kolesch</maintainer>
  <author email="fkolesch@uni-bielefeld.de">Felix Kolesch</author>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/controller</url> -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>plotjuggler_msg</depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
