[project]
name = "Stack of Tasks"
version = "0.0.1"


dependencies = [
    'scipy == 1.11.3',
    'scs ==3.2.2',
    'cvxopt==1.3.0',
    'numpy==1.24.2',
    'osqp==0.6.2.post8',
    'PyQt5==5.15.10',
    'QtAwesome==1.2.2',
    'rospy==1.16.0',
    'scipy==1.11.3',
    'scs==3.2.2',
    'typing_extensions==4.8.0'
]

[tool.black]
line-length = 94

[tool.pylint]
extension-pkg-whitelist = "PyQt5"

[tool.pylint.'MESSAGES CONTROL']
init-hook = 'import sys; sys.path.append("python")'
max-line-length = 94
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
]

[tool.isort]
profile = "black"
line_length = 94
known_msgs = "std_msgs,sensor_msgs,geometry_msgs,visualization_msgs"
known_ros = "rospy,tf,interactive_markers"
known_first_party = "stack_of_tasks"
known_typing = "typing, typing_extensions, numpy.typing"
sections = "FUTURE,STDLIB,TYPING,THIRDPARTY,ROS,MSGS,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "MSGS"
