[project]
name = "Stack_of_Tasks"
version = "0.0.1"

dynamic = ["authors","license","maintainers","description"]

dependencies = [
    'cvxopt',
    'numpy',
    'osqp',
    'PyQt5',
    'rospy',
    'scipy',
    'scs',
    'traits',
    #'https://github.com/rhaschke/traits#egg=maint/6.4',
    'typing_extensions'
]

[tool.black]
line-length = 94

[tool.pylint]
extension-pkg-whitelist = "PyQt5"

[tool.pylint.'MESSAGES CONTROL']
init-hook = 'import sys; sys.path.append("python")'
max-line-length = 94
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
]

[tool.isort]
profile = "black"
line_length = 94
known_msgs = "controller_manager_msgs,std_msgs,sensor_msgs,geometry_msgs,visualization_msgs"
known_ros = "rospy,tf,interactive_markers"
known_first_party = "stack_of_tasks"
known_typing = "typing, typing_extensions, numpy.typing"
sections = "FUTURE,STDLIB,TYPING,THIRDPARTY,ROS,MSGS,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "MSGS"
